<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/incomeFragment"
        android:icon="@drawable/ic_income"
        android:title="@string/nav_income" />

    <item
        android:id="@+id/expenseFragment"
        android:icon="@drawable/ic_expense"
        android:title="@string/nav_expense" />

    <item
        android:id="@+id/reportsFragment"
        android:icon="@drawable/ic_reports"
        android:title="@string/nav_reports" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />

</menu>
